[#7] - downgrades java version to 17 - deployable version